# tub-tex-maker

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
services/: MediaWikiService.h
src/: TubJson.cpp  TubJson.h  TubJson.test.cpp  categories.h  entry_builder.cpp  entry_builder.h  main.cpp  title_type.h  tub_json.cpp  tub_json.h
src/builders/: entry_builder.cpp  entry_builder.h  entry_builder.test.cpp
src/formatters/: latex_formatter.cpp  latex_formatter.h  latex_formatter_test.cpp
src/io/: file_writer.cpp  file_writer.h  mediawiki.h  tub_mediawiki.cpp  tub_mediawiki.h
src/managers/: entry_manager.cpp  entry_manager.h  entry_manager.test.cpp  entry_manger.cpp  entry_manger.h
src/models/: author.cpp  author.h  author_test.cpp  edition.cpp  edition.h  edition_test.cpp  entry.cpp  entry.h  entry_test.cpp  manuscript.cpp  manuscript.h  manuscript_test.cpp  title_type.h
src/services/: TubMediaWikiService.cpp  TubMediaWikiService.h  file_writer_service.cpp  file_writer_service.h  mediawiki_service.h  tub_mediawiki_service.cpp  tub_mediawiki_service.h
tests/: 1000response.json  TubMediaWiki_test.cpp  authors.json  response-editions.json  response-manuscript.json  response.json  samples.json  tub_json_test.cpp  tub_mediawiki_test.cpp
